MB-44685: Revert "Optimize send buffer use"

This reverts commit 91d33a7b34791b073577ee882728154128bb3b16.

We're getting a bunch of std::bad_alloc errors since the
introduction of this change.

Change-Id: I9ecc2375def54bc0380fbe764c9e74aa89a628fe
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/147726
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>